fix: created table-rows mixin and also removed gap parameter from vertical and horizontal flex center

--- a/styles/abstract/_mixin.scss
+++ b/styles/abstract/_mixin.scss
@@ -1,19 +1,24 @@
-@mixin flex-vertical-center($gap: 0rem) {
+@mixin flex-vertical-center {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: $gap;
 }
 
-@mixin flex-horizontal-center($gap: 0rem) {
+@mixin flex-horizontal-center {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: $gap;
 }
 
-@mixin flex-center() {
+@mixin flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@mixin table-rows {
+  padding-left: 5px;
+  grid-template-columns: repeat(6, 1fr);
+  display: grid;
+  text-align: start;
 }
