--- a/styles/layout/_sidebar.scss
+++ b/styles/layout/_sidebar.scss
@@ -10,51 +10,46 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  .upper-sidebar {
-    @include flex-horizontal-center;
-    @include flex-vertical-center(0.5rem);
-    margin-top: 10.81rem;
-    padding: 0;
-    list-style-type: none;
-    li {
-      display: flex;
-      width: 3.875rem;
-      height: 2.4375rem;
-      padding: 0.125rem 0.375rem 0.125rem 0.3125rem;
-      justify-content: center;
-      align-items: center;
-      transition: all 0.2s ease-in-out;
-      border: 1px solid transparent;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      &:hover {
-        border: 1px solid $primary;
-        background: $sidebar-icon-bg;
-        svg,
-        svg path {
-          fill: $primary;
-        }
+}
+.upper-sidebar {
+  @include flex-horizontal-center;
+  @include flex-vertical-center;
+  gap: 0.5rem;
+
+  margin-top: 10.81rem;
+  padding: 0;
+  list-style-type: none;
+  li {
+    display: flex;
+    width: 3.875rem;
+    height: 2.4375rem;
+    padding: 0.125rem 0.375rem 0.125rem 0.3125rem;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+    border: 1px solid transparent;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    &:hover {
+      border: 1px solid $primary;
+      background: $sidebar-icon-bg;
+      svg,
+      svg path {
+        fill: $primary;
       }
     }
   }
-  .lower-sidebar {
-    @include flex-vertical-center(1rem);
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 2rem;
-    li {
-      cursor: pointer;
-    }
-    .glasses-icon {
-      position: relative;
-      :last-child {
-        position: absolute;
-        top: 27%;
-        left: 18%;
-      }
-    }
+}
+.lower-sidebar {
+  @include flex-vertical-center;
+  gap: 1rem;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 2rem;
+  li {
+    cursor: pointer;
   }
 }
